8156928: Fork separate Java VM for each test in RT   - TubelineAssemblerFactoryImplTest suite caused MimeTypeTest to use JDK     classes instead of standalone whenb sharing VM. Signed-off-by: Tomas Kraus <tomas.kraus@oracle.com>