@@ -208,6 +208,14 @@
                     </execution>
                 </executions>
             </plugin>        
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <forkMode>pertest</forkMode>
+                    <argLine>-Djava.endorsed.dirs="${endorsed.dir}"</argLine>
+                </configuration>
+            </plugin>
 <!--
             <plugin>
                 <groupId>org.apache.felix</groupId>
